force-app/main/default/objects/SOQ_QuoteCreation_Settings__c/SOQ_QuoteCreation_Settings__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>SOQ - Initial Quote Creation default values</description>
    <label>SOQ QuoteCreation Settings</label>
</CustomObject>