force-app/main/default/objects/SOQ_QuoteCreation_Settings__c/fields/Approved_Quote_Template_Id__c.field-meta.xml
<CustomField>
    <fullName>Approved_Quote_Template_Id__c</fullName>
    <defaultValue>&quot;a3r1W000001BVwoQAG&quot;</defaultValue>
    <description>Approved Quote - Initial Sale</description>
    <inlineHelpText>Approved Quote - Initial Sale</inlineHelpText>
    <label>Approved_Quote_Template_Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>