force-app/main/default/objects/SOQ_QuoteCreation_Settings__c/fields/BATCHJOB_BATCH_SIZE__c.field-meta.xml
<CustomField>
    <fullName>BATCHJOB_BATCH_SIZE__c</fullName>
    <defaultValue>1</defaultValue>
    <description>Number of records processed in each batch</description>
    <inlineHelpText>Number of records processed in each batch</inlineHelpText>
    <label>BATCHJOB_BATCH_SIZE</label>
    <precision>3</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>