force-app/main/default/objects/SOQ_QuoteCreation_Settings__c/fields/BATCHJOB_OppCreationCutOffDateTime__c.field-meta.xml
<CustomField>
    <fullName>BATCHJOB_OppCreationCutOffDateTime__c</fullName>
    <description>Only auto create quote and quote line item for Opp Regs created since this cutoff date/time</description>
    <inlineHelpText>Only auto create quote and quote line item for Opp Regs created since this cutoff date/time</inlineHelpText>
    <label>BATCHJOB_OppCreationCutOffDateTime</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>