force-app/main/default/objects/SOQ_QuoteCreation_Settings__c/fields/BATCHJOB_RECUR__c.field-meta.xml
<CustomField>
    <fullName>BATCHJOB_RECUR__c</fullName>
    <defaultValue>10</defaultValue>
    <description>Defines recurring frequency in minutes. The job repeats execution based on this time gap</description>
    <inlineHelpText>Defines recurring frequency in minutes. The job repeats execution based on this time gap</inlineHelpText>
    <label>BATCHJOB_RECUR</label>
    <precision>3</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>