force-app/main/default/objects/SOQ_QuoteCreation_Settings__c/fields/Customer_Classification__c.field-meta.xml
<CustomField>
    <fullName>Customer_Classification__c</fullName>
    <defaultValue>&quot;Education=&gt;DGX Opp Reg EDU,vGPU SW Opp Reg EDU,Parabricks Opp Reg EDU;Inception=&gt;DGX Opp Reg Inception&quot;</defaultValue>
    <description>Customer Classification to be set on the Quote for Edu and Inception</description>
    <label>Customer Classification</label>
    <length>255</length>
    <type>Text</type>
</CustomField>