force-app/main/default/objects/SOQ_QuoteCreation_Settings__c/fields/Default_Template_Id__c.field-meta.xml
<CustomField>
    <fullName>Default_Template_Id__c</fullName>
    <defaultValue>&quot;a3r1W000001BVwjQAG&quot;</defaultValue>
    <description>Id for quote template - Budgetary Quote - Initial Sale</description>
    <inlineHelpText>Id for quote template - Budgetary Quote - Initial Sale</inlineHelpText>
    <label>Default Template Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>