force-app/main/default/objects/SOQ_QuoteCreation_Settings__c/fields/Initial_Status__c.field-meta.xml
<CustomField>
    <fullName>Initial_Status__c</fullName>
    <description>Quote Initial Status - Draft</description>
    <label>Initial Status</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
</CustomField>