force-app/main/default/objects/SOQ_QuoteCreation_Settings__c/fields/OppReg_Prog_Disc_Type__c.field-meta.xml
<CustomField>
    <fullName>OppReg_Prog_Disc_Type__c</fullName>
    <defaultValue>&quot;OppReg&quot;</defaultValue>
    <label>OppReg Prog Disc Type</label>
    <length>25</length>
    <required>true</required>
    <type>Text</type>
</CustomField>