force-app/main/default/objects/SOQ_QuoteCreation_Settings__c/fields/Quote_Process_Id__c.field-meta.xml
<CustomField>
    <fullName>Quote_Process_Id__c</fullName>
    <defaultValue>&quot;a3q02000000DjcM&quot;</defaultValue>
    <description>Quote Process Id to bet set that allows guided selling</description>
    <inlineHelpText>Quote Process Id to bet set that allows guided selling</inlineHelpText>
    <label>Quote Process Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>