force-app/main/default/objects/SOQ_QuoteCreation_Settings__c/fields/Quote_Type_c__c.field-meta.xml
<CustomField>
    <fullName>Quote_Type_c__c</fullName>
    <defaultValue>&quot;Quote&quot;</defaultValue>
    <description>Quote Type - Quote/Renewal/Amendment/Re-quote</description>
    <inlineHelpText>Quote Type - in case of initial one it is &quot;Quote&quot;</inlineHelpText>
    <label>Quote Type</label>
    <length>25</length>
    <required>true</required>
    <type>Text</type>
</CustomField>