force-app/main/default/objects/SOQ_QuoteCreation_Settings__c/fields/RecordTypeId__c.field-meta.xml
<CustomField>
    <fullName>RecordTypeId__c</fullName>
    <description>Quote Record Type Id</description>
    <inlineHelpText>Quote Record Type Id</inlineHelpText>
    <label>RecordTypeId</label>
    <length>18</length>
    <required>true</required>
    <type>Text</type>
</CustomField>